--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,7 @@
+:root {
+  --background-color: #20daa2;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -9,10 +13,11 @@ html {
 body {
   background: #eee;
   padding: 0 16px;
+  background-image: url("/images/60-lines.png");
 }
 
 header {
-  background-color: #20daa2;
+  background-color: var(--background-color);
   margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
@@ -22,6 +27,7 @@ header h1 {
   color: #fff;
   font-family: "McLaren", cursive;
   font-weight: 200;
+  text-align: center;
 }
 
 footer {
@@ -59,15 +65,15 @@ footer p {
   position: relative;
   float: right;
   margin-right: 10px;
-  color: #20daa2;
+  color: var(--background-color);
   border: none;
+  width: 36px;
   height: 36px;
-  padding: 0 5px;
   cursor: pointer;
   outline: none;
 }
 
-form {
+form.create-note {
   position: relative;
   width: 480px;
   margin: 30px auto 20px auto;
@@ -76,8 +82,8 @@ form {
   border-radius: 7px;
   box-shadow: 0 1px 5px rgb(138, 137, 137);
 }
-form input,
-form textarea {
+form.create-note input,
+form.create-note textarea {
   width: 100%;
   border: none;
   padding: 4px;
@@ -86,11 +92,11 @@ form textarea {
   font-family: inherit;
   resize: none;
 }
-form button {
+form.create-note button {
   position: absolute;
   right: 18px;
   bottom: -18px;
-  background: #20daa2;
+  background: var(--background-color);
   color: #fff;
   border: none;
   border-radius: 50%;
