--- a/public/styles.css
+++ b/public/styles.css
@@ -31,15 +31,13 @@ header h1 {
 }
 
 footer {
-  position: absolute;
   text-align: center;
-  bottom: 0;
   width: 100%;
   height: 2.5rem;
 }
 
 footer p {
-  color: #ccc;
+  color: #333;
 }
 .note {
   background: #fff;
@@ -105,4 +103,10 @@ form.create-note button {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   cursor: pointer;
   outline: none;
+}
+
+@media all and (max-width: 30em) {
+  form.create-note {
+    width: 100%
+  }
 }
